[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rental_finder"
version = "0.0.1"
authors = [
	{ name="Egoitz", email="colmillovasco@example.com"},
]
description = "Prague rentals scrapper"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
[project.urls]
