[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rental_finder"
version = "0.0.1"
authors = [
	{ name="Egoitz", email="colmillovasco@example.com"},
]
description = "Prague rentals scrapper"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]

[project.dependencies]
beautifulsoup4 = "4.12.3"
bs4 = "0.0.2"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
et-xmlfile = "1.1.0"
idna = "3.6"
lxml = "5.1.0"
numpy = "1.26.4"
openpyxl = "3.1.2"
pandas = "2.2.1"
python-dateutil = "2.9.0.post0"
pytz = "2024.1"
requests = "2.31.0"
six = "1.16.0"
soupsieve = "2.5"
tzdata = "2024.1"
urllib3 = "2.2.1"

[project.dev-dependencies]
pytest = "^6.2.4"

[project.urls]
repository = "https://github.com/EgoitzAB/rental_scraping"
